# naughtyfy

./: Cargo.toml  README.md  docbuilder.sh  precommithook.sh
.github/workflows/: rust.yml
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/errors/: all.html  index.html  struct.FanotifyInitError.html
doc/flags/: all.html  constant.FANOTIFY_METADATA_VERSION.html  constant.FAN_ACCESS.html  constant.FAN_ACCESS_PERM.html  constant.FAN_ALL_CLASS_BITS.html  constant.FAN_ALL_EVENTS.html  constant.FAN_ALL_INIT_FLAGS.html  constant.FAN_ALL_MARK_FLAGS.html  constant.FAN_ALL_OUTGOING_EVENTS.html  constant.FAN_ALL_PERM_EVENTS.html  constant.FAN_ATTRIB.html  constant.FAN_CLASS_CONTENT.html  constant.FAN_CLASS_NOTIF.html  constant.FAN_CLASS_PRE_CONTENT.html  constant.FAN_CLOEXEC.html  constant.FAN_CLOSE.html  constant.FAN_CLOSE_NOWRITE.html  constant.FAN_CLOSE_WRITE.html  constant.FAN_CREATE.html  constant.FAN_DELETE.html  constant.FAN_DELETE_SELF.html  constant.FAN_ENABLE_AUDIT.html  constant.FAN_EVENT_ON_CHILD.html  constant.FAN_FS_ERROR.html  constant.FAN_MARK_ADD.html  constant.FAN_MARK_DONT_FOLLOW.html  constant.FAN_MARK_EVICTABLE.html  constant.FAN_MARK_FILESYSTEM.html  constant.FAN_MARK_FLUSH.html  constant.FAN_MARK_IGNORE.html  (+32 more)
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
examples/: all_open_event.rs  dir_events.rs  errtest.rs  lowkey.rs  pre_content_write.rs  read_with_fid.rs  readme_eg.rs  write.rs
src/: api.rs  errors.rs  flags.rs  lib.rs  low_api.rs  low_layer.rs  structs.rs  types.rs
(+171 files in other folders)
