[package]
name = "naughtyfy"
description = "Modern fanotify wrapper."
keywords = ["fanotify","linux", "files","filesystem","monitor"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/tanveerraza789/naughtyfy.git"
authors = ["Tanveer Raza <tanveerraza789@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
