[package]
name = "naughtyfy"
description = "Modern fanotify wrapper."
keywords = ["fanotify", "linux", "files", "filesystem", "monitor", "notify"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/SubconsciousCompute/naughtyfy.git"
authors = ["Tanveer Raza <tanveerraza789@gmail.com>"]
version = "0.0.4"
edition = "2021"


[lib]
name = "naughtyfy"
path = "src/lib.rs"

[dependencies]
libc = "0.2.139"
